# cryptoalarm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cam0.conf  cam1.conf  do  do-build  lib_event.sh  lib_sendxmpp.sh  loop_ping.sh  mail_example.json  motion-start-now.sh  motion-start.sh  motion.conf  on_camera_lost.sh  on_event_start.sh  on_movie_end.sh  start-irc.sh
soundsimple/: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  log.txt  test.cpp
soundsimple/Debug/: log.txt  makefile  objects.mk  sources.mk  subdir.mk
soundsimple/Debug/src/: simplesound.d  subdir.mk
soundsimple/Debug/src/otshell_utils/: ccolor.d  runoptions.d  subdir.mk  utils.d
soundsimple/scripts/: run-alarm.sh  send-xmpp.sh  send.py  send.sh  sendXMPP.sh  verify.sh
soundsimple/src/: CMakeLists.txt  cAlarmData.cpp  cAlarmData.h  cFile.cpp  cFile.h  cLearn.cpp  cLearn.h  cRecorder.cpp  cRecorder.h  cSections.cpp  cSections.h  cSend.cpp  cSend.h  cSound.cpp  cSound.h  cSoundFrame.cpp  cSoundFrame.h  cSoundProperties.cpp  cSoundProperties.h  ckeysstorage.cpp  ckeysstorage.h  libs.h  send.sh  simplesound.cpp
soundsimple/src/chainsign/: CMakeLists.txt  ckeysstorage.cpp  ckeysstorage.h
soundsimple/src/otshell_utils/: CMakeLists.txt  otshell.cbp  utils.cpp  utils.hpp
soundsimple/tests/: CMakeLists.txt  tests.cpp
video/: cam0.conf  do  lib_sendirc.sh  lib_sendxmpp.sh  motion-start.sh  motion.conf  motion.conf-old1  motion.conf-old2  on_event_start.sh  on_movie_end.sh  verify.sh
